force-app/main/default/objects/Blueprint_Persona_Step__c/Blueprint_Persona_Step__c.object-meta.xml
<CustomObject>
    <label>Blueprint Persona Step</label>
    <nameField>
        <displayFormat>BPS-{000000}</displayFormat>
        <label>Blueprint Persona Step ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blueprint Persona Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>