force-app/main/default/objects/Blueprint_Persona_Step__c/fields/Blueprint_Persona__c.field-meta.xml
<CustomField>
    <fullName>Blueprint_Persona__c</fullName>
    <label>Blueprint Persona</label>
    <referenceTo>Blueprint_Persona__c</referenceTo>
    <relationshipLabel>Blueprint Persona Steps</relationshipLabel>
    <relationshipName>Blueprint_Persona_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>