force-app/main/default/objects/Blueprint_Persona_Step__c/fields/Blueprint_Step__c.field-meta.xml
<CustomField>
    <fullName>Blueprint_Step__c</fullName>
    <label>Blueprint Step</label>
    <referenceTo>Blueprint_Step__c</referenceTo>
    <relationshipLabel>Blueprint Persona Steps</relationshipLabel>
    <relationshipName>Blueprint_Persona_Steps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>