force-app/main/default/objects/Blueprint_Persona_Step__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Step Order for Persona</description>
    <inlineHelpText>Step Order for Persona</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>